--- a/examples/configs/machine_node_config.yaml
+++ b/examples/configs/machine_node_config.yaml
@@ -17,10 +17,13 @@ watcher:
   pings-to-stop: 3
   ping-freq: 3s
 
-action-start-retry:
-  delay: 1s
-  count: 10
-
-runtime-path: /dflow/bin/runtime
-runtime-logs-dir: /var/log/runtime
-runtime-logs-level: info
+runtime:
+  binary-path: /dflow/bin/runtime
+  logs-dir: /var/log/runtime
+  logs-level: info
+  timeout: 5s
+  ack-period: 5s
+  forward-log-dir: /tmp/dflow-log
+  action-start-retry:
+    delay: 1s
+    count: 10
